# easy-camera

./: CMakeLists.txt  CursorWindow.qml  README.md  SettingsDialog.qml  cursortracker.cpp  cursortracker.h  main.cpp  main.qml  qml.qrc
